Oops didn't save first

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1950,6 +1950,18 @@ BP_ThirdPersonCharacter_C.Busy Flags=True
 BP_ThirdPersonCharacter_C.BusyFlags=True
 INT_TextBased_C.Cutscene=True
 INT_TextBased_C.Progression=True
+TextUI_C.Appearance=True
+TextUI_C.Designer=True
+TextUI_C.Input=True
+TextUI_C.Interaction=True
+TextUI_C.Performance=True
+TextUI_C.Layout=True
+TextUI_C.Behavior=True
+TextUI_C.Render Transform=True
+TextUI_C.Localization=True
+TextUI_C.Accessibility=True
+TextUI_C.Clipping=True
+TextUI_C.Navigation=True
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
@@ -1974,10 +1986,10 @@ SceneCaptureComponent2D="\"Object.SceneCapture.ShowFlagSettings.ShowFlagSettings
 SceneCaptureComponent="\"Object.SceneCapture.ShowFlagSettings.ShowFlagSettings[0]\" "
 SceneComponent=
 ActorComponent=
-Object=
-Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.ColorAndOpacity\" "
-Widget=
-Visual=
+Object="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
+Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
+Widget="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
+Visual="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
 OBJ_Keypad_C="\"Object.Default.InteractText\" "
 INT_Keypad_C=
 INT_TextBased_C="\"Object.PRogression.ObjectiveTrigger\" "
@@ -1985,7 +1997,7 @@ InputMappingContext="\"Object.Mappings.Mappings.Mappings[21]\" "
 DataAsset=
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.CornerRadii\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings.CornerRadii\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings.CornerRadii\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.CornerRadii\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.CornerRadii\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings.CornerRadii\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings.CornerRadii\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.CornerRadii\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
-PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.CornerRadii\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings.CornerRadii\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings.CornerRadii\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.CornerRadii\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
+PanelWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
 Border="\"Object.Appearance.Background\" \"Object.Appearance.Background.TintColor\" \"Object.Appearance.Background.OutlineSettings.CornerRadii\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransformPivot\" "
 Keypad_Widget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransformPivot\" "
 UserWidget=
@@ -3120,7 +3132,7 @@ Advanced=False
 [DetailCustomWidgetExpansion]
 SceneCaptureComponent2D=
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Camera.IA_Camera,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Escape.IA_Escape,
-PropertyWrapper=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,
+PropertyWrapper=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,
 BP_ThirdPersonCharacter_C=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,
 INT_Keypad_C=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
@@ -3128,7 +3140,7 @@ SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_Var
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,
 CapsuleComponent=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
 K2Node_Variable=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,
-SceneComponent=
+SceneComponent=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,
 BP_ThirdPersonGameMode_C=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
 INT_TextBased_C=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,
 PostProcessVolume=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,
