Added Text Lines for Phone.

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -90,14 +90,14 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1914,Y=1040)
+LastSize=(X=1914,Y=1003)
 LastExecutedLaunchDevice=Windows@DESKTOP-K0L41OF
 LastExecutedLaunchName=DESKTOP-K0L41OF
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 NewWindowWidth=1914
-NewWindowHeight=1040
+NewWindowHeight=1003
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 MultipleInstancePositions=(X=0,Y=0)
 
@@ -105,16 +105,8 @@ MultipleInstancePositions=(X=0,Y=0)
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=False
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
-OpenAssetsAtExit=/Game/ThirdPerson/Inventory/W_Menu.W_Menu
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_GameManager.BP_GameManager
-OpenAssetsAtExit=/Game/ThirdPerson/Inventory/S_ItemReference.S_ItemReference
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Interactives/INT_TextBased.INT_TextBased
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Interactives/S_CutsceneTrigger.S_CutsceneTrigger
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Interactives/TextUI.TextUI
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Interactives/S_ObjectiveTrigger.S_ObjectiveTrigger
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -1986,13 +1978,13 @@ SceneCaptureComponent2D="\"Object.SceneCapture.ShowFlagSettings.ShowFlagSettings
 SceneCaptureComponent="\"Object.SceneCapture.ShowFlagSettings.ShowFlagSettings[0]\" "
 SceneComponent=
 ActorComponent=
-Object="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
+Object=
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
 Widget="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
 Visual="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
 OBJ_Keypad_C="\"Object.Default.InteractText\" "
 INT_Keypad_C=
-INT_TextBased_C="\"Object.PRogression.ObjectiveTrigger\" "
+INT_TextBased_C="\"Object.Dialogue.Phase Dialogue\" \"Object.Dialogue.Phase Dialogue.Phase Dialogue[0]\" \"Object.Dialogue.Phase Dialogue.Phase Dialogue[0].Text_7_22AB65314FCF56A2B98769A50C6E4781\" \"Object.PRogression.ObjectiveTrigger\" "
 InputMappingContext="\"Object.Mappings.Mappings.Mappings[21]\" "
 DataAsset=
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.CornerRadii\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings.CornerRadii\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings.CornerRadii\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.CornerRadii\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
@@ -2017,7 +2009,7 @@ W_Keypad_C=
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
-BP_GameManager_C="\"Object.Default.ItemTable\" \"Object.Default.ItemTable.ItemTable[0]\" "
+BP_GameManager_C="\"Object.Default.ItemTable\" \"Object.Default.ItemTable.ItemTable[0]\" \"Object.Default.Cutscenes\" \"Object.Default.Cutscenes.Cutscenes[0]\" \"Object.Default.Cutscenes.Cutscenes[0].Text_7_22AB65314FCF56A2B98769A50C6E4781\" "
 PreviewMaterial="\"Object.Lightmass.LightmassSettings\" "
 Material="\"Object.Lightmass.LightmassSettings\" "
 MaterialInterface="\"Object.Lightmass.LightmassSettings\" "
@@ -2056,7 +2048,7 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=136.000 Y=101.000
+ScreenPosition=X=-1784.000 Y=104.000
 WindowSize=X=1312.000 Y=752.000
 InitiallyMaximized=True
 
@@ -3140,7 +3132,7 @@ SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_Var
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,
 CapsuleComponent=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
 K2Node_Variable=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,
-SceneComponent=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,
+SceneComponent=
 BP_ThirdPersonGameMode_C=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
 INT_TextBased_C=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,
 PostProcessVolume=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,
@@ -3243,17 +3235,17 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Blueprints/HUD/W_HUD
-MRUItem1=/Game/ThirdPerson/Blueprints/Interactives/S_ObjectiveTrigger
-MRUItem2=/Game/ThirdPerson/Blueprints/Interactives/S_CutsceneTrigger
-MRUItem3=/Game/ThirdPerson/Inventory/S_ItemReference
-MRUItem4=/Game/ThirdPerson/Inventory/W_Menu
-MRUItem5=/Game/ThirdPerson/Blueprints/Interactives/TextUI
-MRUItem6=/Game/ThirdPerson/Inventory/W_MMenu
-MRUItem7=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem8=/Game/ThirdPerson/Blueprints/Interactives/INT_TextBased
-MRUItem9=/Game/ThirdPerson/Blueprints/Interactives/S_Dialogue
-MRUItem10=/Game/ThirdPerson/Blueprints/BP_GameManager
+MRUItem0=/Game/ThirdPerson/Blueprints/BP_GameManager
+MRUItem1=/Game/ThirdPerson/Blueprints/HUD/W_HUD
+MRUItem2=/Game/ThirdPerson/Blueprints/Interactives/S_ObjectiveTrigger
+MRUItem3=/Game/ThirdPerson/Blueprints/Interactives/S_CutsceneTrigger
+MRUItem4=/Game/ThirdPerson/Inventory/S_ItemReference
+MRUItem5=/Game/ThirdPerson/Inventory/W_Menu
+MRUItem6=/Game/ThirdPerson/Blueprints/Interactives/TextUI
+MRUItem7=/Game/ThirdPerson/Inventory/W_MMenu
+MRUItem8=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem9=/Game/ThirdPerson/Blueprints/Interactives/INT_TextBased
+MRUItem10=/Game/ThirdPerson/Blueprints/Interactives/S_Dialogue
 MRUItem11=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
 MRUItem12=/Game/ThirdPerson/Blueprints/TextUI
 MRUItem13=/Game/Characters/Keith/KeithTexutres/Eyes
@@ -3357,6 +3349,7 @@ CharacterMovementComponent.Character Movement: Walking=True
 AnimSequence.ImportSettings=True
 SphereComponent.Collision=True
 K2Node_VariableSet.Variable=False
+StaticMeshActor.HLOD=False
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Keypad/KeypadRender.KeypadRender=1
@@ -3667,7 +3660,7 @@ bPromptBeforeAutoImporting=True
 bDeleteSourceFilesWithAssets=False
 
 [MessageLog]
-LastLogListing=BlueprintLog
+LastLogListing=PIE
 
 [SuppressableDialogs]
 DeleteConfirmationVariable_Warning=False
