Added basic behavior to desk elements
Some text, speakers, objectives, moved triggers to separate locations

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -111,7 +111,6 @@ OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Wiring/INT_Wiring.INT_Wiring
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Wiring/W_Wiring.W_Wiring
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Keypad/INT_Keypad.INT_Keypad
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Keypad/W_Keypad.W_Keypad
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_GameManager.BP_GameManager
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
@@ -207,7 +206,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/UIElements
+ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Blueprints/Interactives
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -1975,10 +1974,10 @@ Actor.Physics=True
 Actor.Input=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/ThirdPerson/Blueprints/Interactives/INT_TextBased.INT_TextBased;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/ThirdPerson/Blueprints/Interactives/INT_TextBased.INT_TextBased;
 RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraActor_0
 RecentlyPlaced=/Game/ThirdPerson/Blueprints/Wiring/INT_Wiring.INT_Wiring;
 RecentlyPlaced=/Game/ThirdPerson/Blueprints/Keypad/INT_Keypad.INT_Keypad;
@@ -2004,7 +2003,7 @@ Widget=
 Visual=
 OBJ_Keypad_C="\"Object.Default.InteractText\" "
 INT_Keypad_C=
-INT_TextBased_C="\"Object.Default.PhaseItemID\" \"Object.Dialogue.Phase Dialogue\" "
+INT_TextBased_C="\"Object.Default.PhaseItemID\" \"Object.Dialogue.Phase Dialogue\" \"Object.Dialogue.Phase Dialogue.Phase Dialogue[0]\" \"Object.Dialogue.Phase Dialogue.Phase Dialogue[0].Text_7_22AB65314FCF56A2B98769A50C6E4781\" \"Object.PRogression.ObjectiveTrigger\" "
 InputMappingContext="\"Object.Mappings.Mappings.Mappings[21]\" "
 DataAsset=
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.CornerRadii\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings.CornerRadii\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings.CornerRadii\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.CornerRadii\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
@@ -2030,7 +2029,7 @@ EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Obj
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 BP_GameManager_C="\"Object.Default.Cutscenes\" "
-BP_GameManager_C="\"Object.Default.ItemTable\" \"Object.Default.Cutscenes\" "
+BP_GameManager_C="\"Object.Default.ItemTable\" \"Object.Default.Cutscenes\" \"Object.Default.Cutscenes.Cutscenes[0]\" "
 None=======
 PreviewMaterial="\"Object.Lightmass.LightmassSettings\" "
 Material="\"Object.Lightmass.LightmassSettings\" "
@@ -2058,7 +2057,7 @@ ChangeText_3=
 PlayQuip="\"Struct.NewLocalVar\" "
 PlayQuip_7="\"Struct\" "
 SwitchTiles_4="\"Struct\" "
-INT_Wiring_C="\"Object.Default.InitialLayout\" "
+INT_Wiring_C=
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -3166,7 +3165,7 @@ None=======
 None=======
 CapsuleComponent=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
 K2Node_Variable=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,
-SceneComponent=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,
+SceneComponent=
 BP_ThirdPersonGameMode_C=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
 INT_TextBased_C=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,
 PostProcessVolume=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,
@@ -3187,12 +3186,12 @@ CameraActor=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.D
 PlayerStart=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
 BP_GameManager_C=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,
 W_Menu_C=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,
-StaticMeshComponent=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
+StaticMeshComponent=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,
 K2Node_StructOperation=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,
 SphereComponent=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
-SphereComponent=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,
+SphereComponent=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,
 BP_SoundManager_C=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,K2Node_FunctionEntry.Inputs.E26EDD024D5A841C1173529C7079B322,K2Node_FunctionEntry.Inputs.C897AFF6485FF7A028A8C5B2B5B24B14,K2Node_FunctionEntry.Inputs.C901D1694F5E0B1B0395908AB62F10B6,
-BP_SoundManager_C=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
+BP_SoundManager_C=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,
 BillboardComponent=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
 AmbientSound=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,
 TextRenderActor=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,
@@ -3274,26 +3273,26 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Blueprints/Interactives/INT_TextBased
-MRUItem1=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem2=/Game/ThirdPerson/Blueprints/BP_GameManager
-MRUItem3=/Game/ThirdPerson/Blueprints/Keypad/W_Keypad
-MRUItem4=/Game/ThirdPerson/Blueprints/Keypad/INT_Keypad
-MRUItem5=/Game/ThirdPerson/Blueprints/Wiring/W_Wiring
-MRUItem6=/Game/ThirdPerson/Blueprints/Wiring/INT_Wiring
-MRUItem7=/Game/ThirdPerson/Inventory/W_MMenu
-MRUItem8=/Game/ThirdPerson/Blueprints/HUD/W_HUD
-MRUItem9=/Game/ThirdPerson/Blueprints/Interactives/S_ObjectiveTrigger
-MRUItem10=/Game/ThirdPerson/Blueprints/Interactives/S_CutsceneTrigger
-MRUItem11=/Game/ThirdPerson/Inventory/S_ItemReference
-MRUItem12=/Game/ThirdPerson/Inventory/W_Menu
-MRUItem13=/Game/ThirdPerson/Blueprints/Interactives/TextUI
-MRUItem14=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem15=/Game/ThirdPerson/Blueprints/Interactives/S_Dialogue
-MRUItem16=/Game/ThirdPerson/Blueprints/TextUI
-MRUItem17=/Game/Characters/Keith/KeithTexutres/Eyes
-MRUItem18=/Game/Characters/Keith/Character_Mesh
-MRUItem19=/Game/ThirdPerson/Sounds/BP_SoundManager
+MRUItem0=/Game/ThirdPerson/Props/DESK
+MRUItem1=/Game/ThirdPerson/Blueprints/Interactives/INT_TextBased
+MRUItem2=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem3=/Game/ThirdPerson/Blueprints/BP_GameManager
+MRUItem4=/Game/ThirdPerson/Blueprints/Keypad/W_Keypad
+MRUItem5=/Game/ThirdPerson/Blueprints/Keypad/INT_Keypad
+MRUItem6=/Game/ThirdPerson/Blueprints/Wiring/W_Wiring
+MRUItem7=/Game/ThirdPerson/Blueprints/Wiring/INT_Wiring
+MRUItem8=/Game/ThirdPerson/Inventory/W_MMenu
+MRUItem9=/Game/ThirdPerson/Blueprints/HUD/W_HUD
+MRUItem10=/Game/ThirdPerson/Blueprints/Interactives/S_ObjectiveTrigger
+MRUItem11=/Game/ThirdPerson/Blueprints/Interactives/S_CutsceneTrigger
+MRUItem12=/Game/ThirdPerson/Inventory/S_ItemReference
+MRUItem13=/Game/ThirdPerson/Inventory/W_Menu
+MRUItem14=/Game/ThirdPerson/Blueprints/Interactives/TextUI
+MRUItem15=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem16=/Game/ThirdPerson/Blueprints/Interactives/S_Dialogue
+MRUItem17=/Game/ThirdPerson/Blueprints/TextUI
+MRUItem18=/Game/Characters/Keith/KeithTexutres/Eyes
+MRUItem19=/Game/Characters/Keith/Character_Mesh
 
 [UMGSequencerSettings SequencerSettings]
 AutoChangeMode=None
@@ -3393,6 +3392,7 @@ StaticMeshActor.StaticMesh=False
 StaticMeshActor.Materials=False
 None=======
 INT_Keypad_C.Collision=False
+SphereComponent.Physics=False
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Keypad/KeypadRender.KeypadRender=1
@@ -3482,6 +3482,7 @@ INT_Keypad_C.Collision=False
 /Game/ThirdPerson/Blueprints/Interactives/INT_TextBased.INT_TextBased=1
 /Engine/EditorBlueprintResources/StandardMacros.StandardMacros=1
 /Game/ThirdPerson/Inventory/W_MMenu.W_MMenu=1
+/Game/ThirdPerson/Props/DESK.DESK=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
