--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -91,7 +91,7 @@ AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
 LastSize=(X=1914,Y=1040)
-LastSize=(X=0,Y=0)
+LastSize=(X=1914,Y=1040)
 None=======
 None=======
 LastExecutedLaunchDevice=Windows@DESKTOP-K0L41OF
@@ -101,19 +101,16 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 NewWindowWidth=1914
 NewWindowHeight=1040
-NewWindowHeight=1003
+NewWindowHeight=1040
 MultipleInstancePositions=(X=0,Y=0)
+LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [EditorStartup]
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=False
-OpenAssetsAtExit=/Game/ThirdPerson/Inventory/W_Menu.W_Menu
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Interactives/INT_TextBased.INT_TextBased
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
-OpenAssetsAtExit=/Game/ThirdPerson/Inventory/W_Inventory.W_Inventory
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -209,7 +206,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/ImageTextures/SpeakerFaces/AMI_Flipbooks
+ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/ImageTextures/ItemImages
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -2038,14 +2035,14 @@ SceneCaptureComponent2D="\"Object.SceneCapture.ShowFlagSettings.ShowFlagSettings
 SceneCaptureComponent="\"Object.SceneCapture.ShowFlagSettings.ShowFlagSettings[0]\" "
 SceneComponent=
 ActorComponent=
-Object="\"Object.Lightmass.LightmassSettings\" "
+Object=
 Image="\"Object.Appearance.Brush.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
 Widget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
 Visual="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransformPivot\" "
 OBJ_Keypad_C="\"Object.Default.InteractText\" "
 INT_Keypad_C=
 INT_TextBased_C=
-INT_TextBased_C="\"Object.Default.PhaseItemID\" \"Object.Dialogue.Phase Dialogue\" "
+INT_TextBased_C="\"Object.Default.PhaseItemID\" \"Object.Dialogue.Phase Dialogue\" \"Object.Dialogue.Phase Dialogue.Phase Dialogue[0]\" \"Object.Dialogue.Phase Dialogue.Phase Dialogue[0].Text_7_22AB65314FCF56A2B98769A50C6E4781\" \"Object.Dialogue.Phase Dialogue.Phase Dialogue[0].Speaker_22_43A8129F4A71D4BB4098E98DD99E5B3F\" "
 None=======
 None=======
 None=======
@@ -2075,7 +2072,7 @@ CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 BP_GameManager_C="\"Object.Default.Cutscenes\" "
 BP_GameManager_C="\"Object.Default.ItemTable.ItemTable[0]\" \"Object.Default.ItemTable.ItemTable[0].CombineInto_10_A1E67FEF49FAC97C8E5A868F73F579FC\" \"Object.Default.ItemTable.ItemTable[1]\" \"Object.Default.ItemTable.ItemTable[1].CombinableWith_9_E7C2233748C1F1FA3AC47BAE7426FCA0\" \"Object.Default.ItemTable.ItemTable[1].CombineInto_10_A1E67FEF49FAC97C8E5A868F73F579FC\" \"Object.Default.Cutscenes.Cutscenes[0]\" \"Object.Default.CharacterList\" "
-BP_GameManager_C="\"Object.Default.Cutscenes\" "
+BP_GameManager_C="\"Object.Default.ItemTable\" \"Object.Default.ItemTable.ItemTable[1]\" \"Object.Default.Cutscenes\" "
 PreviewMaterial="\"Object.Lightmass.LightmassSettings\" "
 Material="\"Object.Lightmass.LightmassSettings\" "
 MaterialInterface="\"Object.Lightmass.LightmassSettings\" "
@@ -2127,8 +2124,8 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=136.000 Y=101.000
-WindowSize=X=1312.000 Y=752.000
+ScreenPosition=X=136.000 Y=100.800
+WindowSize=X=1313.600 Y=753.600
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2149,7 +2146,7 @@ UNR=C:/Users/loopa/Desktop/Des 203/Github Repo/Bigfoots-First-Game/Content/Third
 BRUSH=C:/Users/joshu/Documents/Unreal Projects/Bigfoots-First-Game/Content/
 FBX=C:/Users/joshu/Documents/Unreal Projects/Bigfoots-First-Game/Content/
 FBXAnim=C:/Users/joshu/Documents/Unreal Projects/Bigfoots-First-Game/Content/
-GenericImport=../../../../../../Documents/AbertayDocs/DES203/ui elements/game paused.png
+GenericImport=C:/Users/joshu/Downloads/sammich.png
 GenericExport=C:/Users/joshu/Documents/Unreal Projects/Bigfoots-First-Game/Content/
 GenericOpen=C:/Users/joshu/Documents/Unreal Projects/Bigfoots-First-Game/Content/
 GenericSave=C:/Users/joshu/Documents/Unreal Projects/Bigfoots-First-Game/Content/
@@ -3178,8 +3175,8 @@ NullDrv.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
-RecentsFiles=D:/Games/Epic Games/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/Epic Games/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=D:/Games/Epic Games/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=G:/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [/Script/UnrealEd.MaterialEditorOptions]
@@ -3225,7 +3222,7 @@ K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_Variab
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,K2Node_FunctionEntry.Inputs.E26EDD024D5A841C1173529C7079B322,K2Node_FunctionEntry.Inputs.C897AFF6485FF7A028A8C5B2B5B24B14,K2Node_FunctionEntry.Inputs.C901D1694F5E0B1B0395908AB62F10B6,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,
 CapsuleComponent=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
 K2Node_Variable=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,
-SceneComponent=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,
+SceneComponent=
 BP_ThirdPersonGameMode_C=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
 INT_TextBased_C=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,K2Node_FunctionEntry.Inputs.E26EDD024D5A841C1173529C7079B322,K2Node_FunctionEntry.Inputs.C897AFF6485FF7A028A8C5B2B5B24B14,K2Node_FunctionEntry.Inputs.C901D1694F5E0B1B0395908AB62F10B6,
 INT_TextBased_C=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,
@@ -3567,6 +3564,7 @@ None=======
 /Game/ThirdPerson/ImageTextures/SpeakerFaces/AMIFlip_Mat.AMIFlip_Mat=1
 /Game/ThirdPerson/ImageTextures/SpeakerFaces/AMI_Flipbooks/AMI_Con.AMI_Con=1
 /Game/ThirdPerson/ImageTextures/SpeakerFaces/AMI_Flipbooks/AMIFlip_Mat.AMIFlip_Mat=1
+/Game/ThirdPerson/Inventory/W_Inventory.W_Inventory=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
